--- a/rony01.html
+++ b/rony01.html
@@ -6,8 +6,12 @@
 			</head>
 			<body>
 			<h2 style="color:red; text-align:center">BANGLADESH</h2>
-			<h3 style="color:green; text-align:center">GREEN COUNTRY</h3>
+			<h3 style="color:green; text-align:center"><i><b><u><strong>GREEN COUNTRY</i></b></u></strong></h3>
 
+			
+			
+			<img src="img/index.jpg"hight="400"width="400"/>
+			<link="www.google.com"/>
 			</body>
 
 
